fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 /* App.css */
 .container {
   display: flex;
-  height: 100vh;
-  width:100%;
-  align-items: center;
   justify-content: center;
-  flex-direction: row;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+  flex-direction: column; /* If you want to stack elements vertically */
 }
 #root {
   max-width: 1280px;
