--- a/src/components/upload.css
+++ b/src/components/upload.css
@@ -38,7 +38,6 @@ body.dark {
 .home {
   position: relative;
   height: 100vh;
-  max-width: 600px;
   background: var(--body-color);
   transition: var(--tran-05);
 }
